# ot-harjoitustyo

./: .coveragerc  README.MD  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
src/: index.py  servicehandler.py
src/entities/: function.py  variable.py
src/repositories/: function_repository.py  variable_repository.py
src/services/: consoleio.py  translator.py
src/tests/: function_repo_test.py  translator_test.py  variable_repo_test.py
